- FIX: Max/MSP - freeing immediate buffers with overdrive is bogus -> using queued flext timer
- FIX: Bug in clearing vasp references
- CHANGE: changed behavior of vasp.spit on uneven vector counts
		[vasp a b c( -> [vasp.spit 2] now outputs a(outlet 2), b(outlet 1), c(outlet 2), bang(outlet 3)
- REMOVE: eliminated [vasp.cconj] as an object as it can easily be replaced by an abstraction

0.1.2:
- FIX: bug in vasp.frames* ... wrong argument
- FIX: another bug in resize of immediate buffers
- CHANGE: immediates will be initialized to zero, also upon resize to a larger size (by default, later make this optional)
- ADD: attributes for all basic parameters: ref,to,arg, update,detach,prior (loglvl,argchk,unit later)
- ADD: vasp.channel,vasp.vector - attribute "index"
- ADD: vasp.frames,vasp.frames+,vasp.offset,vasp.offset+,vasp.size,vasp.size+,vasp.imm - attribute "frames"
- ADD: vasp.frames*,vasp.frames/,vasp.size*,vasp.size/ - attribute "factor"
- ADD: vasp.part - attribute "parts"
- ADD: vasp.peaks? - attribute "peaks"
- ADD: vasp.shift,vasp.xshift - attribute "fill"
- ADD: vasp.tilt,vasp.xtilt - attributes "fill","inter"
- ADD: vasp.offset=,vasp.frames= - attributes "dir","slope"
- CHANGE: update m_method_ virtual functions of same objects
- FIX: immediate vasp garbage collection is now done in separate thread
- ADD: vasp.size... objects: attribute "keep" determines whether buffer content should be preserved (default = 1)
- CHANGE: buffer reference checks upon all operations enforced (by new CVasp (checked vasp) class)
- FIX: immediate vasps can not have frames > size
- FIX: immediate garbage collection was not triggered in threaded build
- FIX: changed forgotten standard ASSERT to FLEXT_ASSERT (thanks to Frank Barknecht)

0.1.1:
- FIX: bug in resize of immediate buffers
- CHANGE: check (at actual operation!) whether vector exceeds buffer size (GetRVecs, GetCVecs -> corrlen)

0.1.0:
- NEW: vasp.a<, vasp.a>, vasp.a<=, vasp.a>= for absolute comparisons