@@ -14,9 +14,15 @@ WARRANTIES, see the file, "license.txt," in this distribution.
 // Initialization function for xsample library
 static V xsample_main()
 {
-	post("xsample objects, version " XSAMPLE_VERSION ", (C)2001-2003 Thomas Grill");
-	post("xsample: xrecord~, xplay~, xgroove~ - send objects a 'help' message to get assistance");
-	post("");
+	post("-------------------------------");
+	post("xsample objects, version " XSAMPLE_VERSION);
+    post("");
+	post("  xrecord~, xplay~, xgroove~   ");
+    post("  (C)2001-2003 Thomas Grill    ");
+#ifdef FLEXT_DEBUG
+    post("          DEBUG BUILD          ");
+#endif
+	post("-------------------------------");
 
 	// call the objects' setup routines
 	FLEXT_DSP_SETUP(xrecord);
