@@ -17,6 +17,7 @@ Version history:
 - CHANGE: changed behavior of vasp.spit on uneven vector counts
 		[vasp a b c( -> [vasp.spit 2] now outputs a(outlet 2), b(outlet 1), c(outlet 2), bang(outlet 3)
 - REMOVE: eliminated [vasp.cconj] as an object as it can easily be replaced by an abstraction
+- ADD: vasp.search (vasp.o=, vasp.f=) objects... @incl attribute (default false) to include current sample into search
 
 0.1.2:
 - FIX: bug in vasp.frames* ... wrong argument
